# darknet-intergration-in-cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CUDA.cmake  DarknetStaticLib.cmake  README.md  a.cpp  a.out  build.sh  nohup.out  setup.py
dockerfile/: Dockerfile
include/: clibyolotalk.h  image_utils.h  libyolotalk.h  polygen_utils.h  safe_queue.hpp  yolo.h  yolotalk_utils.h
libs/darknet/: CMakeLists.txt  Makefile
libs/linux_x64_cpu/: darknet  uselib
libyolotalk/: core.py  test.py
src/: image_utils.cpp  libyolotalk.cpp  main.cpp  polygen_utils.cpp  yolo.cpp  yolotalk_utils.cpp
